# wordle_best_first

wordle_best_first/: pyproject.toml
wordle_best_first/tests/: test_wordle_best_first.py
wordle_best_first/wordle_best_first/: BestFirstWord.ipynb
