[tool.poetry]
name = "wordle_best_first"
version = "0.1.0"
description = ""
authors = ["Shaun Patterson <shaunpatterson@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
numpy = "^1.22.3"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
